refactor: move LbeChip component for common use

--- a/docs/10_domains/10_analytical_chemistry.mdx
+++ b/docs/10_domains/10_analytical_chemistry.mdx
@@ -4,7 +4,7 @@ nfdi4chem-id: dac
 slug: "/analytical_chemistry"
 ---
 
-import { LbeChip } from "@site/src/components/lbe/LbeElements.js";
+import LbeChip from "@site/src/components/commons/LbeChip.js";
 import ElnFinder from "@site/src/components/eln/ElnFinder.js";
 
 <LbeChip title="analytical chemistry" />
@@ -44,12 +44,12 @@ General data repositories include [Zenodo](https://zenodo.org/) or [RADAR4Chem](
 
 For method-specific data, several specialised repositories are available. A few examples include:
 
--   [MassBank EU](https://massbank.eu/)  
-    A field-specific ecosystem of databases and tools for mass spectrometry reference spectra.
--   [MetaboLights](https://www.ebi.ac.uk/metabolights/)  
-    A repository for metabolomic studies.
--   [nmrXiv](https://nmrxiv.org/)  
-    A repository for NMR data.
+- [MassBank EU](https://massbank.eu/)  
+  A field-specific ecosystem of databases and tools for mass spectrometry reference spectra.
+- [MetaboLights](https://www.ebi.ac.uk/metabolights/)  
+  A repository for metabolomic studies.
+- [nmrXiv](https://nmrxiv.org/)  
+  A repository for NMR data.
 
 This list is not exhaustive, and there may be other repositories that are more suitable for your data.
 
