--- a/docs/10_domains/30_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/30_pharmaceutical_chemistry.mdx
@@ -3,7 +3,8 @@ title: "Medicinal / Pharmaceutical Chemistry"
 slug: "/pharmaceutical_chemistry"
 ---
 
-import { LbeChip } from "@site/src/components/lbe/LbeElements.js";
+import LbeChip from "@site/src/components/commons/LbeChip.js";
+
 import ElnFinderPharm from "@site/src/components/eln/ElnFinderPharm.js";
 
 <LbeChip title="medicinal chemistry" />
