--- a/docs/10_domains/60_synthetic_chemistry.mdx
+++ b/docs/10_domains/60_synthetic_chemistry.mdx
@@ -4,7 +4,8 @@ nfdi4chem-id: dsoic
 slug: "/synthetic_chemistry"
 ---
 
-import { LbeChip } from "@site/src/components/lbe/LbeElements.js";
+import LbeChip from "@site/src/components/commons/LbeChip.js";
+
 import ElnFinder from "@site/src/components/eln/ElnFinder.js";
 
 <LbeChip title="inorganic chemistry" />
