--- a/docs/10_domains/20_electrochemistry.mdx
+++ b/docs/10_domains/20_electrochemistry.mdx
@@ -3,7 +3,8 @@ title: "Electrochemistry"
 slug: "/electrochemistry"
 ---
 
-import { LbeChip } from "@site/src/components/lbe/LbeElements.js";
+import LbeChip from "@site/src/components/commons/LbeChip.js";
+
 import ElnFinder from "@site/src/components/eln/ElnFinder.js";
 
 <LbeChip title="physical chemistry" />
