--- a/docs/10_domains/40_physical_chemistry.mdx
+++ b/docs/10_domains/40_physical_chemistry.mdx
@@ -3,7 +3,8 @@ title: "Physical and Computational Chemistry"
 slug: "/physical_chemistry"
 ---
 
-import { LbeChip } from "@site/src/components/lbe/LbeElements.js";
+import LbeChip from "@site/src/components/commons/LbeChip.js";
+
 import ElnFinder from "@site/src/components/eln/ElnFinder.js";
 
 <LbeChip title="physical chemistry" />
