fix: add Translate component for localized text in DMP buttons

--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -4,6 +4,7 @@ slug: "/dmp"
 ---
 
 import Features from "@site/src/components/features/Features";
+import Translate from "@docusaurus/Translate";
 
 # Data Management Plan (DMP)
 
@@ -84,12 +85,12 @@ The catalogue of questions is available as a [downloadable text document](https:
     {
       url: "https://rdmo.nfdi4chem.de/",
       imgUrl: "/img/nfdi4chem_Data_Management_Plan.svg",
-      text: "NFDI4Chem RDMO instance",
+      text: <Translate>NFDI4Chem RDMO instance</Translate>,
     },
     {
       url: "https://doi.org/10.5281/zenodo.10948510",
       imgUrl: "/img/nfdi4chem_Data_Documentation.svg",
-      text: "Chemistry-specific DMP Template",
+      text: <Translate>Chemistry-specific DMP Template</Translate>,
     },
   ]}
 />
