Revert "fix: add Translate component for localized text in DMP buttons"
This reverts commit d42b3b46a4bb29db611e26aeeee767c7256db60b.

--- a/docs/30_data/10_dmp.mdx
+++ b/docs/30_data/10_dmp.mdx
@@ -4,7 +4,6 @@ slug: "/dmp"
 ---
 
 import Features from "@site/src/components/features/Features";
-import Translate from "@docusaurus/Translate";
 
 # Data Management Plan (DMP)
 
@@ -85,12 +84,12 @@ The catalogue of questions is available as a [downloadable text document](https:
     {
       url: "https://rdmo.nfdi4chem.de/",
       imgUrl: "/img/nfdi4chem_Data_Management_Plan.svg",
-      text: <Translate>NFDI4Chem RDMO instance</Translate>,
+      text: "NFDI4Chem RDMO instance",
     },
     {
       url: "https://doi.org/10.5281/zenodo.10948510",
       imgUrl: "/img/nfdi4chem_Data_Documentation.svg",
-      text: <Translate>Chemistry-specific DMP Template</Translate>,
+      text: "Chemistry-specific DMP Template",
     },
   ]}
 />
