fix: update import paths

--- a/docs/10_domains/00_domain_guide.mdx
+++ b/docs/10_domains/00_domain_guide.mdx
@@ -5,7 +5,7 @@ id: "domains_guide"
 ---
 
 import Features from "@site/src/components/features/Features";
-import domains from "./domains";
+import domains from "@site/src/data/domains";
 
 Looking for information on managing research data in chemistry? Choose your chemical domain and find discipline-specific help on research data management.
 
