--- a/docs/20_role/00_role_guide.mdx
+++ b/docs/20_role/00_role_guide.mdx
@@ -5,7 +5,7 @@ id: "role_guide"
 ---
 
 import Features from "@site/src/components/features/Features";
-import roles from "./roles";
+import roles from "@site/src/data/roles";
 
 Looking for information on managing research data in chemistry? Choose your role and find solutions for role-specific data management issues.
 
