--- a/docs/50_data_publication/70_publishing_standards/28_publishing_standards_intro.mdx
+++ b/docs/50_data_publication/70_publishing_standards/28_publishing_standards_intro.mdx
@@ -5,7 +5,7 @@ id: "publishing_standards_intro"
 ---
 
 import Features from "@site/src/components/features/Features";
-import stakeholders from "./stakeholders";
+import stakeholders from "@site/src/data/stakeholders";
 
 :::info Info:
 Authors, academic publishers and research data infrastructure providers are the target audiences for these standards.
