fix: wrap FloatImage in BulletContainer for consistent layout

--- a/docs/40_smartlab/10_eln.mdx
+++ b/docs/40_smartlab/10_eln.mdx
@@ -78,12 +78,18 @@ ELNs help to link experimental descriptions directly to the collected data so th
       <li>Data is available, even after change of personnel</li>
     </ul>
   </BulletBox>
+</BulletContainer>
+
+<BulletContainer>
   <FloatImage
     alt="FAIR data principles"
     url="/img/topics/FAIR_data_principles.png"
-    float="unset"
     width="min(100%, 640px)"
-  />
+/>
+
+</BulletContainer>
+
+<BulletContainer>
   <BulletBox secondary>
     <h3>Standardised Documentation</h3>
     <ul>
