fix: simplify list item formatting in ELN advantages section

--- a/docs/40_smartlab/10_eln.mdx
+++ b/docs/40_smartlab/10_eln.mdx
@@ -63,10 +63,7 @@ ELNs help to link experimental descriptions directly to the collected data so th
   <BulletBox>
     <h3>Avoid Data Loss</h3>
     <ul>
-      <li>
-        Linking experimental descriptions to collected data (analogue and
-        digital)
-      </li>
+      <li>Linking experimental descriptions to collected data (analogue and digital)</li>
       <li>Secure data storage, backups</li>
     </ul>
   </BulletBox>
