modify: small formatting fixes

--- a/docs/60_topics/62_data_formats/20_JCAMP-DX.mdx
+++ b/docs/60_topics/62_data_formats/20_JCAMP-DX.mdx
@@ -1,6 +1,6 @@
 ---
 title: "JCAMP-DX"
-slug: "/JCAMP-DX"
+slug: "/JCAMP-DX
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
@@ -11,7 +11,7 @@ import ButtonContainer from "@site/src/components/features/ButtonContainer.js";
 
 
 ## Definition
-JCAMP-DX is an open, text-based data format family developed by the Joint Committee on Atomic and Molecular Physical Data (JCAMP) for storing and exchanging spectroscopic data; standardisation and further development are carried out under the responsibility of International Union of Pure and Applied Chemistry ([IUPAC](https://iupac.org)), which coordinates standardization and extensions of the format . It was developed to enable instrument-independent data sharing and long-term accessibility of spectral measurements. 
+JCAMP-DX is an open, text-based data format family developed by the Joint Committee on Atomic and Molecular Physical Data (JCAMP) for storing and exchanging spectroscopic data; standardisation and further development are carried out under the responsibility of International Union of Pure and Applied Chemistry ([IUPAC](https://iupac.org)), which coordinates standardization and extensions of the format. It was developed to enable instrument-independent data sharing and long-term accessibility of spectral measurements.  
 Although IUPAC formally oversees the standard, active development of JCAMP-DX has largely slowed since the mid-2000s, and the format now functions primarily as a de facto standard for spectroscopic data exchange."
 
 
@@ -24,7 +24,7 @@ JCAMP-DX files are plain ASCII text files designed to be both human-readable and
 
 
 ## Metadata and Interoperability
-A central design goal of JCAMP-DX is the inclusion of rich, self-describing metadata within the data file itself. This facilitates interoperability between instruments, software tools, repositories, and publishers. Though beeing historically older than FAIR, the format supports data reuse and long-term preservation and is well aligned with the [FAIR data principles](/docs/fair) — Findable, Accessible, Interoperable, and Reusable—widely adopted in research data management.
+A central design goal of JCAMP-DX is the inclusion of rich, self-describing metadata within the data file itself. This facilitates interoperability between instruments, software tools, repositories, and publishers. Though beeing historically older than FAIR, the format supports data reuse and long-term preservation and is well aligned with the [FAIR data principles](/docs/fair)—Findable, Accessible, Interoperable, and Reusable—widely adopted in research data management.
 
 
 ## Use Cases and Limitations
